[package]
name = "ipns-vanity"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GPU-accelerated vanity search for Ed25519 IPNS names (OpenCL, with multi-threaded CPU fallback)"
authors = ["Valentin Kivachuk Burda"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vk496/ipns-vanity"
keywords = ["ipns", "ipfs", "vanity", "ed25519", "opencl"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"
anyhow = "1.0"
memchr = "2.7"
ocl = "0.19"
ctrlc = "3.4"
hex = "0.4"

[dev-dependencies]
multibase = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
